# VLA_isaacsim

./: .gitattributes  .gitignore  README.md  command.md  pyproject.toml  tmp_joint_probe.txt  tmp_joint_probe_full.txt
config/: local_paths.example.json
demos/: run_dualarm_tabletop.py  run_dualarm_with_openpi.py
markdown/: README_DATA_COLLECTION.md  README_LEISAAC_CLEAN_CLOSING_IN.md  README_PROJECT_OVERVIEW.md  command.md  run_random_dualarm_ik_targets.md  数采审计.md  调研报告.md
scripts/: hdf5.py  replay.py  (+16 more)
source/zhishu_dualarm_lab/: README.md  __init__.py  isaacLab.sh  pyproject.toml
source/zhishu_dualarm_lab/assets/: __init__.py
source/zhishu_dualarm_lab/assets/robots/: __init__.py
source/zhishu_dualarm_lab/assets/robots/zhishu_robot/: __init__.py  robot_cfg.py
source/zhishu_dualarm_lab/assets/robots/zhishu_robot/usd/: .asset_hash  README.md  config.yaml
source/zhishu_dualarm_lab/demos/: run_dualarm_tabletop.py  run_dualarm_with_openpi.py
source/zhishu_dualarm_lab/tasks/: __init__.py
source/zhishu_dualarm_lab/tasks/dualarm_tabletop/: __init__.py  cameras.py  constants.py  env.py  env_cfg.py  objects.py  scene_cfg.py
source/zhishu_dualarm_lab/tasks/robot_only/: __init__.py  constants.py  env.py  env_cfg.py  scene_cfg.py
source/zhishu_dualarm_lab/tasks/robot_with_plate/: __init__.py  constants.py  env.py  env_cfg.py  objects.py  scene_cfg.py
source/zhishu_dualarm_lab/utils/: __init__.py  action_adapter.py  closing_in_dataset.py  local_paths.py  msgpack_numpy.py  obs_builder.py  policy_client.py  robot_only_closing_in_dataset.py  tcp_frames.py
