[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhishu-dualarm-lab"
version = "0.1.0"
description = "Minimal Isaac Lab external project for Zhishu dual-arm tabletop tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]

